# minigraph

./: .gitignore  Cargo.toml  README.md
src/: error.rs  graph.rs  lib.rs  smallset.rs  task_graph.rs
