[package]
name = "minigraph"
version = "0.1.0"
authors = ["N/A <N/A>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minihandle = { path = "../minihandle", features = ["index"] }
smallvec = { version = "1.8.*", features = ["const_generics"] }
miniunchecked = { path = "../miniunchecked" }